# BulletinBoard

./: .env  .gitignore  Cargo.toml
migrations/2022-03-04-015100_thread/: down.sql  up.sql
migrations/2022-03-19-082616_comment/: down.sql  up.sql
migrations/2022-05-02-043705_account/: up.sql
public/css/: bulletin_board.css
public/js/: bulletin_board.js
src/: error.rs  error_msg.rs  main.rs  routes.rs  schema.rs  screen_status.rs  session_management.rs
src/controller/: account_controller.rs  mod.rs  mypage_controller.rs  thread_controller.rs
src/models/: account.rs  mod.rs  thread.rs  thread_comment.rs
src/service/: account_service.rs  comment_service.rs  mod.rs  thread_service.rs
templates/: account.html  index.html  login.html  main.html  mypage.html  password.html  signup.html  thread.html  thread_comment.html
