[package]
name = "bulletin_board"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
thiserror = "1.0.30"
r2d2 = "0.8.9"
serde = { version = "1.0", feature=["dervice"]}
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2", "serde_json"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
diesel_migrations = "1.4.0"
actix-files = "0.5.0"